cahnge angora image path

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent h-100">
-                        <img class="card-img-top" src="img/.angorajpg.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/angora.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">company profile</h4>
                             <p class="card-text">Pellentesque elementum libero enim, eget gravida nunc laoreet et.
